--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "test:unit": "vitest --environment jsdom",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "build-only": "vite build",
-    "dev": "vite",
+    "dev": "vite --force",
     "preview": "vite preview --port 4173",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
@@ -23,7 +23,9 @@
     "vue-router": "^4.1.3",
     "vuetify": "^3.0.0-beta.0",
     "web3": "^1.7.5",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "@metamask/detect-provider": "^1.2.0",
+    "web3-eth-contract": "^1.3.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
@@ -45,6 +47,8 @@
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vitest": "^0.21.0",
     "vue-cli-plugin-vuetify": "~2.5.4",
-    "vue-tsc": "^0.39.5"
+    "vue-tsc": "^0.39.5",
+    "@vue/compiler-sfc": "^3.0.4",
+    "buffer": "^6.0.3"
   }
 }
